<resources>
    <string name="app_name">NewsApp-Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">search</string>
    <string name="title_general">General</string>
    <string name="title_business">Business</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_health">Health</string>
    <string name="title_science">Science</string>
    <string name="title_sports">Sports</string>
    <string name="title_technology">Technology</string>
    <string name="title_front_page">Front Page</string>
    <string name="no_offline_content_available">No offline content available.</string>
    <string name="text_more">More</string>
</resources>
